--- a/semana_01/flexbox/index.html
+++ b/semana_01/flexbox/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Flexbox and Gride</title>
   </head>
   <body>
     <div class="container">
-      <div class="item">
+      <div class="item item1">
         <p>item 1</p>
       </div>
       <br />
-      <div class="item">
+      <div class="item item2">
         <p>item 2</p>
       </div>
       <br />
-      <div class="item">
+      <div class="item item3">
         <p>item 3</p>
       </div>
     </div>
