--- a/semana_01/grid/index.html
+++ b/semana_01/grid/index.html
@@ -5,17 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Execicio2</title>
+    <title>GRID</title>
   </head>
   <body>
     <div class="container">
-      <div id="header">
-        <!-- header -->
-        <header>
-          <p>HEADER</p>
-        </header>
-      </div>
-
       <!-- home -->
       <div class="item">
         <p>
@@ -53,13 +46,6 @@
           quidem quasi magni beatae!
         </p>
       </div>
-    </div>
-
-    <!-- footer -->
-    <div id="footer">
-      <footer>
-        <p>FOOTER</p>
-      </footer>
     </div>
   </body>
 </html>
