--- a/semana_01/recuperacao/index.html
+++ b/semana_01/recuperacao/index.html
@@ -25,5 +25,10 @@
         <button class="btn">Entrar</button>
       </div>
     </header>
+    <div class="home">
+      <div class="item">item 1</div>
+      <div class="item">item 2</div>
+      <div class="item">item 3</div>
+    </div>
   </body>
 </html>
