--- a/semana_02/exercicio7/cartas.html
+++ b/semana_02/exercicio7/cartas.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARRAYS</title>
+    <title>Cartas</title>
   </head>
   <body>
-    <h1>arrays</h1>
-    <script src="./indexTeste.js"></script>
+    <h1>cartas</h1>
+    <script src="./cartas.js"></script>
   </body>
 </html>
